[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=7.5.0",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langgraph>=0.3.5",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "semantic-router>=0.0.72",
]
